- `10.0.0-rc-2.2`   - `UIInput`.     - `UIColor`. Default colors are now based on the new IUIModelValue. `Model.IsNullable` property       instead of ``Model.IsNullableValueType`; which fixes the issue where a default (null) value       was not being added to the list, even if the underlying string property was nullable.   - Update NuGet packages.

--- a/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/UIInput/UIColor.razor
+++ b/src/FluentUI/Marqdouj.DotNet.Web.Components.FluentUI/UIInput/UIColor.razor
@@ -85,7 +85,7 @@
 
         if (Colors == null)
         {
-            var colorNames = new HtmlColorNameCollection(Model.IsNullableValueType, "");
+            var colorNames = new HtmlColorNameCollection(Model.IsNullable, null);
             colors = colorNames.Items.Select(e => new Option<string>() { Text = e.NameDisplay, Value = e.Name }).ToList();
             return;
         }
